--- a/rootdir/init.pantech.usb.rc
+++ b/rootdir/init.pantech.usb.rc
@@ -13,7 +13,7 @@
 # limitations under the License.
 
 on init
-    write /sys/class/android_usb/android0/f_rndis/manufacturer Sony
+    write /sys/class/android_usb/android0/f_rndis/manufacturer Pantech #Edited manufacturer
     write /sys/class/android_usb/android0/f_rndis/vendorID 0FCE
     write /sys/class/android_usb/android0/f_rndis/wceis 1
 
